--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,5 +15,5 @@
     target="_blank"
     >✎ Paper</a
   >
-  {{ template "partials/cookie.html" . }}
+  {{ template "partials/cookie-consent.html" . }}
 </footer>
